--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.6.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
@@ -20,6 +23,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.55.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
